WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
312173
AX: AccessibilityObject::lineRangeForPosition can loop infinitely with display:table in flex container
https://bugs.webkit.org/show_bug.cgi?id=312173
Summary
AX: AccessibilityObject::lineRangeForPosition can loop infinitely with displa...
Tyler Wilcock
Reported
2026-04-13 11:36:45 PDT
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-04-13 11:36:52 PDT
<
rdar://problem/174675164
>
Tyler Wilcock
Comment 2
2026-04-13 11:39:24 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/62650
EWS
Comment 3
2026-04-13 18:52:36 PDT
Committed
311153@main
(b6c85acbb9b0): <
https://commits.webkit.org/311153@main
> Reviewed commits have been landed. Closing PR #62650 and removing active labels.
EWS
Comment 4
2026-04-13 21:39:04 PDT
Committed
305413.661@safari-7624-branch
(b9ce78b6cf4b): <
https://commits.webkit.org/305413.661@safari-7624-branch
> Reviewed commits have been landed. Closing PR #4940 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug