AX: AccessibilityObject::lineRangeForPosition can loop infinitely with display:table in flex container https://bugs.webkit.org/show_bug.cgi?id=312173 rdar://174675164

Reviewed by Joshua Hoffman.

The while loop in lineRangeForPosition advances by calling VisiblePosition::next(),
but if next() returns the same position (e.g., at a boundary in certain DOM structures
like a display:table span inside a flex container), the loop never terminates. Add a
check to break when no forward progress is made.

* LayoutTests/accessibility/line-range-display-table-in-flex-expected.txt: Added.
* LayoutTests/accessibility/line-range-display-table-in-flex.html: Added.
* LayoutTests/platform/ios/TestExpectations:
* Source/WebCore/accessibility/AccessibilityObject.cpp:
(WebCore::AccessibilityObject::lineRangeForPosition const):

Canonical link: https://commits.webkit.org/311153@main